--- a/html/spatial-partition.html
+++ b/html/spatial-partition.html
@@ -542,38 +542,17 @@ a performance bottleneck.</p>
 </li>
 <li>
 <p><strong>If the partitioning is object-independent, but <em>hierarchy</em> is object-dependent:</strong></p>
-<p>One spatial partition deserves special mention because it has some of the best characteristics of both fixed partitions and adaptable ones: <span name="quad">quadtrees</span>. A quadtree partitions the world into four cells:</p>
-<div class="codehilite"><pre><span class="o">+-------+-------+</span>
-<span class="o">|</span> <span class="o">*</span>  <span class="o">*</span>  <span class="o">|</span>       <span class="o">|</span>
-<span class="o">|</span>       <span class="o">|</span>       <span class="o">|</span>
-<span class="o">|</span>     <span class="o">*</span> <span class="o">|</span> <span class="o">*</span>     <span class="o">|</span>
-<span class="o">+-------+-------+</span>
-<span class="o">|</span>       <span class="o">|</span>      <span class="o">*|</span>
-<span class="o">|</span>       <span class="o">|</span>   <span class="o">*</span>   <span class="o">|</span>
-<span class="o">|</span>       <span class="o">|</span>       <span class="o">|</span>
-<span class="o">+-------+-------+</span>
-</pre></div>
-
-
-<p>The <em>boundaries</em> of these squares are fixed: they always slice space right in half. Then, for each of those squares, if are still too many objects in it, it is subdivided:</p>
-<div class="codehilite"><pre><span class="o">+-------+-------+</span>
-<span class="o">|</span> <span class="o">*</span> <span class="o">|*</span>  <span class="o">|</span>       <span class="o">|</span>
-<span class="o">|---+---|</span>       <span class="o">|</span>
-<span class="o">|</span>   <span class="o">|</span> <span class="o">*</span> <span class="o">|</span> <span class="o">*</span>     <span class="o">|</span>
-<span class="o">+-------+-------+</span>
-<span class="o">|</span>       <span class="o">|</span>      <span class="o">*|</span>
-<span class="o">|</span>       <span class="o">|</span>   <span class="o">*</span>   <span class="o">|</span>
-<span class="o">|</span>       <span class="o">|</span>       <span class="o">|</span>
-<span class="o">+-------+-------+</span>
-</pre></div>
-
-
-<p>This process continues recursively until every square has fewer than some maximum number of objects. This means that the partitions don&#8217;t <em>move</em> based on the set of objects, but the number of <em>subdivisions</em> is object-dependent.</p>
+<p>One spatial partition deserves special mention because it has some of the best characteristics of both fixed partitions and adaptable ones: <span name="quad">quadtrees</span>.</p>
 <aside name="quad">
 
-<p>A quadtree partitions 2D space. Its 3D analogue is the <em>octree</em>: it takes a <em>volume</em> and partitions it into eight <em>cubes</em>. Aside from the obvious differences, it works just the same as its flatter sibling.</p>
+<p>A quadtree partitions 2D space. Its 3D analogue is the <em>octree</em>: it takes a <em>volume</em> and partitions it into eight <em>cubes</em>. Aside from the extra
+dimension, it works the same as its flatter sibling.</p>
 </aside>
 
+<p>A quadtree starts with the entire space as a single partition. If the number of objects in the space exceeds some threshold, it is sliced into four smaller squares. The <em>boundaries</em> of these squares are fixed: they always slice space right in half.</p>
+<p>Then, for each of the four squares, we do the same process again, recursively, until every square has a small number of objects in it. Since we only recursively subdivide squares that have a high population, this partitioning adapts to the set of objects, but the partitions don&#8217;t <em>move</em>.</p>
+<p>You can see the partitioning in action reading from left to right here:</p>
+<p><img src="images/spatial-partition-quadtree.png" /></p>
 <ul>
 <li>
 <p><em>Objects can be added incrementally.</em> Adding a new object means just finding the right square and adding it. If that bumps that square above the maximum count, it gets subdivided. The other objects in that square get pushed down into the new smaller squares. This requires a little work, but it&#8217;s a <em>fixed</em> amount of effort: the number of objects you have to move will always be less than the maximum object count. Adding a single object can never trigger more than one subdivision.</p>
