Tweak index a bit.

--- a/html/index.html
+++ b/html/index.html
@@ -90,7 +90,7 @@
 </ul>
 </div>
 
-<p>I&#8217;m here to help! I wrote this book, <em>Game Programming Patterns</em>, to address just those questions. It&#8217;s a collection of patterns I found in games to make code cleaner, easier to understand, and faster.</p>
+<p>I&#8217;m here to help! I wrote this book to answer those questions. It&#8217;s a collection of patterns I found in games to make code cleaner, easier to understand, and faster.</p>
 
 <h2>It&#8217;s Free and Online!</h2>
 
@@ -177,7 +177,7 @@
 
 <img src="images/dogshot.jpg" class="profile" />
 
-<p>I&#8217;m Bob Nystrom. I started writing this book while working at Electronic Arts. In my eight years there, I saw a lot of beautiful code, and a lot of really horrendous code. My hope was that I could take what I learned from the beautiful stuff, write it down here, and then show it to the people writing the awful stuff to get them to stop.</p>
+<p>I&#8217;m Bob Nystrom. I started writing this book while working at Electronic Arts. In my eight years there, I saw a lot of beautiful code, and a lot of really horrendous code. My hope was that I could take what I learned from the beautiful stuff, write it down here, and then teach it to the people writing the awful stuff.</p>
 
 <p>If you want to get in touch with me, you can email <code>bob</code> at this site or just ask me (<a href="https://twitter.com/intent/user?screen_name=munificentbob"><code>@munificentbob</code></a>) on twitter.
 
