--- a/html/introduction.html
+++ b/html/introduction.html
@@ -21,81 +21,6 @@
 </script>
 </head>
 <body id="top">
-<div class="scrim"></div>
-<div class="nav">
-  <div class="bar">
-    <div class="column">
-      <h1 class="thread"><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a> &rarr;
-      <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
-    </div>
-  </div>
-  <div class="column">
-    <table>
-      <tr>
-        <td width="30%" class="section-nav">
-          <h2>Introduction</h2>
-          <ul><li>
-<a href="#what's-in-store">What's in Store</a></li><li>
-<a href="#how-it-relates-to-design-patterns">How it Relates to Design Patterns</a></li><li>
-<a href="#how-to-read-the-book">How to Read the Book</a></li><li>
-<a href="#how-the-book-is-formatted">How the Book is Formatted</a></li><li>
-<a href="#about-the-sample-code">About the Sample Code</a></li><li>
-<a href="#where-to-go-from-here">Where to Go From Here</a></li></ul>
-
-        </td>
-        <td width="70%">
-          <h2>Chapters</h2>
-<ul>
-  <li><a href="introduction.html">Introduction</a>
-    <ul>
-      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
-    </ul>
-  </li>
-  <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
-    <ul>
-      <li><a href="command.html">Command</a>,
-        <a href="flyweight.html">Flyweight</a>,
-        <a href="observer.html">Observer</a>,
-        <a href="prototype.html">Prototype</a>,
-        <a href="singleton.html">Singleton</a>,
-        <a href="state.html">State</a></li>
-    </ul>
-  </li>
-  <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
-    <ul>
-      <li><a href="double-buffer.html">Double Buffer</a>,
-        <a href="game-loop.html">Game Loop</a>,
-        <a href="update-method.html">Update Method</a></li>
-    </ul>
-  </li>
-  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
-    <ul>
-      <li><a href="bytecode.html">Bytecode</a>,
-      <a href="subclass-sandbox.html">Subclass Sandbox</a>,
-      <a href="type-object.html">Type Object</a></li>
-    </ul>
-  </li>
-  <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
-    <ul>
-      <li><a href="component.html">Component</a>,
-        <a href="event-queue.html">Event Queue</a>,
-        <a href="service-locator.html">Service Locator</a></li>
-    </ul>
-  </li>
-  <li><a href="optimization-patterns.html">Optimization Patterns</a>
-    <ul>
-      <li><a href="data-locality.html">Data Locality</a>,
-      <a href="dirty-flag.html">Dirty Flag</a>,
-      <a href="object-pool.html">Object Pool</a>,
-      <a href="spatial-partition.html">Spatial Partition</a></li>
-    </ul>
-  </li>
-</ul>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
 <div class="page sidebar">
 <div class="content">
 <h1>Introduction</h1>
@@ -382,9 +307,14 @@ that process will continue after the ink dries on these pages.</p>
 and refine (or refute!) the patterns in this one, you contribute to
 the software community. If you have suggestions, corrections, or other
 feedback about what&#8217;s in here, please get in touch.</p>
-<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
+<nav>
+  
+  <span class="next"><a href="architecture-performance-and-games.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+</nav>
 </div>
 </div>
+<footer>&copy; 2009-2014 Robert Nystrom</footer>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
