--- a/html/state.html
+++ b/html/state.html
@@ -21,86 +21,6 @@
 </script>
 </head>
 <body id="top">
-<div class="scrim"></div>
-<div class="nav">
-  <div class="bar">
-    <div class="column">
-      <h1 class="thread">&larr; <a href="singleton.html">Singleton</a> | <a href="sequencing-patterns.html">Sequencing Patterns</a> &rarr;
-      <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
-    </div>
-  </div>
-  <div class="column">
-    <table>
-      <tr>
-        <td width="30%" class="section-nav">
-          <h2>State</h2>
-          <ul><li>
-<a href="#we've-all-been-there">We've All Been There</a></li><li>
-<a href="#finite-state-machines-to-the-rescue">Finite State Machines to the Rescue</a></li><li>
-<a href="#enums-and-switches">Enums and Switches</a></li><li>
-<a href="#the-state-pattern">The State Pattern</a></li><li>
-<a href="#where-are-the-state-objects">Where Are the State Objects?</a></li><li>
-<a href="#enter-and-exit-actions">Enter and Exit Actions</a></li><li>
-<a href="#what's-the-catch">What's the Catch?</a></li><li>
-<a href="#concurrent-state-machines">Concurrent State Machines</a></li><li>
-<a href="#hierarchical-state-machines">Hierarchical State Machines</a></li><li>
-<a href="#pushdown-automata">Pushdown Automata</a></li><li>
-<a href="#so-how-useful-are-they">So How Useful Are They?</a></li></ul>
-
-        </td>
-        <td width="70%">
-          <h2>Chapters</h2>
-<ul>
-  <li><a href="introduction.html">Introduction</a>
-    <ul>
-      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
-    </ul>
-  </li>
-  <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
-    <ul>
-      <li><a href="command.html">Command</a>,
-        <a href="flyweight.html">Flyweight</a>,
-        <a href="observer.html">Observer</a>,
-        <a href="prototype.html">Prototype</a>,
-        <a href="singleton.html">Singleton</a>,
-        <a href="state.html">State</a></li>
-    </ul>
-  </li>
-  <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
-    <ul>
-      <li><a href="double-buffer.html">Double Buffer</a>,
-        <a href="game-loop.html">Game Loop</a>,
-        <a href="update-method.html">Update Method</a></li>
-    </ul>
-  </li>
-  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
-    <ul>
-      <li><a href="bytecode.html">Bytecode</a>,
-      <a href="subclass-sandbox.html">Subclass Sandbox</a>,
-      <a href="type-object.html">Type Object</a></li>
-    </ul>
-  </li>
-  <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
-    <ul>
-      <li><a href="component.html">Component</a>,
-        <a href="event-queue.html">Event Queue</a>,
-        <a href="service-locator.html">Service Locator</a></li>
-    </ul>
-  </li>
-  <li><a href="optimization-patterns.html">Optimization Patterns</a>
-    <ul>
-      <li><a href="data-locality.html">Data Locality</a>,
-      <a href="dirty-flag.html">Dirty Flag</a>,
-      <a href="object-pool.html">Object Pool</a>,
-      <a href="spatial-partition.html">Spatial Partition</a></li>
-    </ul>
-  </li>
-</ul>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
 <div class="page sidebar">
 <div class="content">
 <h1>State</h1>
@@ -716,9 +636,14 @@
 <li>The entity responds to a series of inputs or events over time.</li>
 </ol>
 <p>In games, they are most known for being used in AI, but they are also common in implementations of user input handling, navigating menu screens, parsing text, network protocols, and other asynchronous behavior.</p>
-<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
+<nav>
+  <span class="prev">&larr; <a href="singleton.html">Previous Chapter</a></span>
+  <span class="next"><a href="sequencing-patterns.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+</nav>
 </div>
 </div>
+<footer>&copy; 2009-2014 Robert Nystrom</footer>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
