--- a/html/index.html
+++ b/html/index.html
@@ -185,9 +185,9 @@
 
 <p>Part of the magic of writing a book online is that it&#8217;s easy to change. If you find mistakes or have suggestions, please don&#8217;t hesitate to <a href="https://github.com/munificent/game-programming-patterns/issues">file a bug</a> or send me a pull request.</p>
 
-<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
 </div>
 </div>
+<footer>&copy; 2009-2014 Robert Nystrom</footer>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
