--- a/html/prototype.html
+++ b/html/prototype.html
@@ -21,78 +21,6 @@
 </script>
 </head>
 <body id="top">
-<div class="scrim"></div>
-<div class="nav">
-  <div class="bar">
-    <div class="column">
-      <h1 class="thread">&larr; <a href="observer.html">Observer</a> | <a href="singleton.html">Singleton</a> &rarr;
-      <h1>&equiv; <a href="index.html">Game Programming Patterns</a></h1>
-    </div>
-  </div>
-  <div class="column">
-    <table>
-      <tr>
-        <td width="30%" class="section-nav">
-          <h2>Prototype</h2>
-          <ul><li>
-<a href="#the-prototype-design-pattern">The Prototype Design Pattern</a></li><li>
-<a href="#the-prototype-language-paradigm">The Prototype Language Paradigm</a></li><li>
-<a href="#prototypes-for-data-modeling">Prototypes for Data Modeling</a></li></ul>
-
-        </td>
-        <td width="70%">
-          <h2>Chapters</h2>
-<ul>
-  <li><a href="introduction.html">Introduction</a>
-    <ul>
-      <li><a href="architecture-performance-and-games.html">Architecture, Performance, and Games</a></li>
-    </ul>
-  </li>
-  <li><a href="design-patterns-revisited.html">Design Patterns Revisited</a>
-    <ul>
-      <li><a href="command.html">Command</a>,
-        <a href="flyweight.html">Flyweight</a>,
-        <a href="observer.html">Observer</a>,
-        <a href="prototype.html">Prototype</a>,
-        <a href="singleton.html">Singleton</a>,
-        <a href="state.html">State</a></li>
-    </ul>
-  </li>
-  <li><a href="sequencing-patterns.html">Sequencing Patterns</a>
-    <ul>
-      <li><a href="double-buffer.html">Double Buffer</a>,
-        <a href="game-loop.html">Game Loop</a>,
-        <a href="update-method.html">Update Method</a></li>
-    </ul>
-  </li>
-  <li><a href="behavioral-patterns.html">Behavioral Patterns</a>
-    <ul>
-      <li><a href="bytecode.html">Bytecode</a>,
-      <a href="subclass-sandbox.html">Subclass Sandbox</a>,
-      <a href="type-object.html">Type Object</a></li>
-    </ul>
-  </li>
-  <li><a href="decoupling-patterns.html">Decoupling Patterns</a>
-    <ul>
-      <li><a href="component.html">Component</a>,
-        <a href="event-queue.html">Event Queue</a>,
-        <a href="service-locator.html">Service Locator</a></li>
-    </ul>
-  </li>
-  <li><a href="optimization-patterns.html">Optimization Patterns</a>
-    <ul>
-      <li><a href="data-locality.html">Data Locality</a>,
-      <a href="dirty-flag.html">Dirty Flag</a>,
-      <a href="object-pool.html">Object Pool</a>,
-      <a href="spatial-partition.html">Spatial Partition</a></li>
-    </ul>
-  </li>
-</ul>
-        </td>
-      </tr>
-    </table>
-  </div>
-</div>
 <div class="page sidebar">
 <div class="content">
 <h1>Prototype</h1>
@@ -487,9 +415,14 @@
 
 
 <p>A little extra power in your game engine&#8217;s data modelling system can make it easier for designers to add lots of little variations to the armaments and beasties populating your game world, and that richness is exactly what delights players.</p>
-<p class="footer">&copy; 2009-2014 Robert Nystrom</p>
+<nav>
+  <span class="prev">&larr; <a href="observer.html">Previous Chapter</a></span>
+  <span class="next"><a href="singleton.html">Next Chapter</a> &rarr;</span>
+  <span class="toc">&equiv; <a href="/">Table of Contents</a></span>
+</nav>
 </div>
 </div>
+<footer>&copy; 2009-2014 Robert Nystrom</footer>
 </body>
 <script src="jquery-1.10.1.min.js"></script>
 <script src="script.js"></script>
