--- a/html/introduction.html
+++ b/html/introduction.html
@@ -48,7 +48,7 @@ program, so a tiny syntax error was impenetrable to us. If the program
 didn&#8217;t work, which was often, we started over from scratch.</p>
 <p>At the back of the stack of pages was a real monster: a program that
 took up several dense pages of code. It took a while before we worked
-up the courage to even try it, but it was irresistable: the title
+up the courage to even try it, but it was irresistible: the title
 above the listing was &#8220;Tunnels and Trolls.&#8221; We had no idea
 what it did, but it sounded like a game, and what could be cooler than
 a computer game that you programmed yourself?</p>
@@ -139,7 +139,7 @@ write another?</p>
 </li>
 </ul>
 <p>I like both of these kinds of books, but I think they leave some gaps. Books specific to a domain rarely tell you how that chunk of code interacts with the rest of the game. You may be a wizard at physics and rendering, but do you know how to tie them together gracefully?</p>
-<p>The second category covers that, but I find it often too monotlithic and too genre-specific. Especially with the rise of mobile and casual gaming, we&#8217;re in a period where lots of different genres of games are being created. We aren&#8217;t all just cloning Quake anymore. Books that walk you through a single engine aren&#8217;t a good fit when <em>your</em> game doesn&#8217;t fit that mold.</p>
+<p>The second category covers that, but I find it often too monolithic and too genre-specific. Especially with the rise of mobile and casual gaming, we&#8217;re in a period where lots of different genres of games are being created. We aren&#8217;t all just cloning Quake anymore. Books that walk you through a single engine aren&#8217;t a good fit when <em>your</em> game doesn&#8217;t fit that mold.</p>
 <p>Instead, what I&#8217;m trying to do here is more <span name="carte"><em>&agrave; la carte</em></span>. Each of the chapters in this book is an independent idea that you can apply to your code. This way, you can mix and match them in a way that works best for the game <em>you</em> want to make.</p>
 <aside name="carte">
 
@@ -175,7 +175,7 @@ an <em>extension</em> of it. While the patterns introduced here are useful in ot
 <li>
 <p>Development cycles are highly compressed and a number of
     programmers need to be able to rapidly build and iterate on a rich
-    set of different behavior without stepping on each others&#8217; toes or
+    set of different behavior without stepping on each other&#8217;s toes or
     leaving footprints all over the codebase.</p>
 </li>
 <li>
