--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -53,11 +53,10 @@ chunk of in-use memory between them. If we try to allocate a twelve-byte
 object, we&#8217;ll fail. No more sparklies onscreen.</p>
 <aside name="park">
 
-<p>Have you ever tried to parallel park on a busy street where the
-already parked cars are spaced out just a <em>little</em> bit too far? If
-they could just bunch up, there&#8217;d be room for your car, but the free
-space is divided up into bits of open curb between half a dozen cars.
-That&#8217;s fragmentation.</p>
+<p>It&#8217;s like trying to parallel park on a busy street where the
+already parked cars are spread out a bit too far. If
+they&#8217;d bunch up, there would be room, but the free
+space is <em>fragmented</em> into bits of open curb between half a dozen cars.</p>
 </aside>
 
 <p><span name="heap"></span></p>
