--- a/html/object-pool.html
+++ b/html/object-pool.html
@@ -685,12 +685,11 @@ the object exposes.</p>
 <h2><a href="#see-also" name="see-also">See Also</a></h2>
 <ul>
 <li>
-<p>This looks a lot like the <a class="gof-pattern"
-    href="flyweight.html">Flyweight pattern</a>.
-    Both maintain a collection of reusable objects. The difference is what &#8220;reuse&#8221; means. Flyweight objects are reused by sharing the same instance between
-    multiple owners <em>simultaneously</em>. It avoids
-    <em>duplicate</em> memory usage by using the same object in multiple
-    contexts.</p>
+<p>This looks a lot like the <a class="gof-pattern" href="flyweight.html">
+    Flyweight pattern</a>. Both maintain a collection of reusable objects. The
+    difference is what &#8220;reuse&#8221; means. Flyweight objects are reused by sharing
+    the same instance between multiple owners <em>simultaneously</em>. It avoids
+    <em>duplicate</em> memory usage by using the same object in multiple contexts.</p>
 <p>The objects in a pool get reused too, but only over time. &#8220;Reuse&#8221; in the
 context of an object pool means reclaiming the memory for an object
 <em>after</em> the original owner is done with it. With an object pool, there
@@ -698,7 +697,10 @@ isn&#8217;t any expectation that an object will be shared within its
 lifetime.</p>
 </li>
 <li>
-<p>Packing a bunch of objects of the same type together in memory increases helps keep your CPU cache full as you iterate over those objects. The <a class="pattern" href="data-locality.html">Data Locality pattern</a> is all about that.</p>
+<p>Packing a bunch of objects of the same type together in memory helps keep
+    your CPU cache full as you iterate over those objects. The
+    <a class="pattern" href="data-locality.html">Data Locality pattern</a>
+    is all about that.</p>
 </li>
 </ul>
 <nav>
